--- a/pom.xml
+++ b/pom.xml
@@ -60,13 +60,22 @@
       parent pom) -->
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <source>17</source>
+              <target>17</target>
+          </configuration>
+      </plugin>
+        <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
+          <inherited>true</inherited>
           <configuration>
-            <suitexmlfiles>
-              <suitexmlfile>testng.xml</suitexmlfile>
-            </suitexmlfiles>
           </configuration>
         </plugin>
       </plugins>
